--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -15,6 +15,7 @@
     "expo": "~51.0.28",
     "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
+    "mongodb": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
