--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@expo/metro-runtime": "~3.2.3",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
@@ -19,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-bottom-toolbar": "^4.3.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
