Added preliminary image loading to clothing item list view. My examples only have file path so they only work on web, but URI's with base64 components work on mobile as well.

--- a/ClosetLab/app.json
+++ b/ClosetLab/app.json
@@ -32,8 +32,18 @@
             "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
             "recordAudioAndroid": true
           }
-        ]
+        ],
+        ["expo-build-properties", {
+          "android": {
+            "usesCleartextTraffic": true
+          },
+          "ios": {
+          }
+        }]
       ]
-    }
+    },
+    "plugins": [
+      "expo-build-properties"
+    ]
   }
 }
