--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -22,15 +22,12 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-<<<<<<< Updated upstream
-    "react-native-web": "~0.19.10"
-=======
     "react-native-web": "~0.19.10",
     "expo-build-properties": "~0.2.0"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "concurrently": "^9.0.1",
     "metro": "^0.80.8"
   },
   "private": true
