--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "concurrently --raw \"npx expo start\" \"python ./backend/app.py --host=127.0.0.1 --port=8000\"",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -30,4 +30,3 @@
   },
   "private": true
 }
-
