--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "expo": "~51.0.28",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
@@ -27,6 +28,13 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "metro": "^0.80.8"
+  },
+  "extends": {
+    "plugin": "react-hooks/recommended"
+  },
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "private": true
 }
