--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-web": "~0.19.10"
   },
