--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -6,7 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ],
+    "setupFiles": [
+      "./Test/JestSetup.js"
+    ]
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -14,12 +24,15 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
     "eslint-plugin-react-hooks": "^5.0.0",
     "expo": "~51.0.28",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
+    "jest": "^29.4.0",
+    "jest-expo": "~51.0.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
