--- a/.github/workflows/.docker-image.yml
+++ b/.github/workflows/.docker-image.yml
@@ -4,7 +4,8 @@ name: Build and Deploy Docker Image
 on:
   push:
     branches:
-      - main
+      - backend
+      - origin [master]
 
 jobs:
   build-and-deploy:
