--- a/ClosetLab/Backend/Dockerfile
+++ b/ClosetLab/Backend/Dockerfile
@@ -9,7 +9,7 @@ COPY . /app
 
 COPY requirements.txt /app/requirements.txt
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache -r requirements.txt
 
 COPY entrypoint.sh /app/entrypoint.sh
 # Make the entrypoint script executable
