--- a/.github/workflows/.docker-image.yml
+++ b/.github/workflows/.docker-image.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t my-flask-app:latest -f ClosetLab/Backend/Dockerfile .
+          docker build -t my-flask-app:latest --no-cache -f ClosetLab/Backend/Dockerfile .
 
       - name: Run Docker container
         run: |
