--- a/ClosetLab/Backend/Dockerfile
+++ b/ClosetLab/Backend/Dockerfile
@@ -7,16 +7,17 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-COPY requirements.txt /requirements.txt
+RUN ls
+COPY requirements.txt /app/requirements.txt
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /app/entrypoint.sh
 # Make the entrypoint script executable
 RUN chmod +x entrypoint.sh
 
 # Expose port 8001 for Gunicorn
-EXPOSE 5000
+EXPOSE 8000
 
 # Set the entrypoint to the entrypoint script
-CMD ["/entrypoint.sh"]
+CMD ["/app/entrypoint.sh"]
