--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -6,7 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ],
+    "setupFiles": [
+      "./Test/JestSetup.js"
+    ]
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -14,40 +24,33 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
-<<<<<<< Updated upstream
+    "eslint-plugin-react-hooks": "^5.0.0",
     "expo": "~51.0.28",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
+    "inline-style-prefixer": "^7.0.1",
+    "jest": "^29.4.0",
+    "jest-expo": "~51.0.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-=======
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "expo": "^52.0.4",
-    "expo-build-properties": "~0.12.5",
-    "expo-camera": "~15.0.16",
-    "expo-status-bar": "~1.12.1",
-    "jest": "^29.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.74.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "^2.20.2",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.0.0",
-    "react-native-vector-icons": "^10.2.0",
->>>>>>> Stashed changes
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "jest-expo": "^52.0.0",
-    "metro": "^0.80.8",
-    "react-test-renderer": "^18.3.1"
+    "metro": "^0.80.8"
+  },
+  "extends": {
+    "plugin": "react-hooks/recommended"
+  },
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "private": true
 }
