--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -28,14 +28,15 @@
     "axios": "^1.7.7",
     "eslint-plugin-react-hooks": "^5.0.0",
     "expo": "~51.0.28",
+    "expo": "^52.0.5",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
     "jest": "^29.4.0",
-    "jest-expo": "~51.0.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native": "^0.76.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-web": "~0.19.10"
@@ -43,6 +44,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "metro": "^0.80.8"
+    "jest": "^29.7.0",
+    "jest-expo": "^52.0.0",
+    "metro": "^0.80.8",
+    "react-test-renderer": "^18.3.1"
   },
   "extends": {
     "plugin": "react-hooks/recommended"
@@ -52,4 +57,4 @@
     "react-hooks/exhaustive-deps": "warn"
   },
   "private": true
-}
+}}
