--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -22,6 +22,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@imgly/background-removal": "^1.5.5",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
     "@types/jest": "^29.5.14",
@@ -37,6 +38,7 @@
     "react-native": "^0.76.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
+    "react-native-elements": "^3.4.3",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
