--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -11,6 +11,9 @@
   },
   "jest": {
     "preset": "jest-expo",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
     ],
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.0",
     "metro": "^0.81.0",
