--- a/ClosetLab/package.json
+++ b/ClosetLab/package.json
@@ -37,6 +37,7 @@
     "expo-status-bar": "~2.0.0",
     "jest": "^29.4.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.4.2",
     "react-dom": "18.3.1",
     "react-native": "^0.76.1",
     "react-native-dropdown-picker": "^5.4.6",
