--- a/package.json
+++ b/package.json
@@ -1,13 +1,64 @@
 {
+  "name": "closetlab",
+  "version": "1.0.0",
+  "main": "expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ],
+    "setupFiles": [
+      "./Test/JestSetup.js"
+    ]
+  },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@expo/metro-runtime": "~4.0.0",
+    "@imgly/background-removal": "^1.5.5",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.0.3",
+    "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
-    "expo-image-picker": "^15.0.7",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-reanimated": "^3.15.5",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0"
-  }
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "expo": "^52.0.7",
+    "expo-build-properties": "~0.13.1",
+    "expo-camera": "~16.0.5",
+    "expo-status-bar": "~2.0.0",
+    "jest": "^29.4.0",
+    "react": "^18.2.0",
+    "react-day-picker": "^9.4.2",
+    "react-dom": "18.3.1",
+    "react-native": "^0.76.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-web": "~0.19.13"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^52.0.0",
+    "metro": "^0.81.0",
+    "react-test-renderer": "^18.3.1"
+  },
+  "extends": {
+    "plugin": "react-hooks/recommended"
+  },
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  },
+  "private": true
 }
